# mvg_dioxus

./: Cargo.toml  Dioxus.toml  README.md  input.css
public/: tailwind.css
src/: main.rs
