[package]
name = "mvg_dioxus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
dioxus-hot-reload = { version = "0.4.0", features = ["file_watcher"] }
env_logger = "0.10.1"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }

[profile.release]
lto = true
